# warp2api-full

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLOUDFLARE_SETUP.md  CLOUDFLARE_WORKER_DEPLOY.md  Dockerfile  README.md  WARP.md  cloudflare-worker.js  docker-compose.yml  docker-entrypoint.sh  docker-start.sh  openai_compat.py  parse_warp_response.py  pyproject.toml  server.py  test_anonymous_user.py  test_detailed_tool_issue.py  test_token_pool.py  test_worker_system.py  warp_request_handler.py  warp_token_manager.py  warp_token_pool.py
.github/workflows/: docker-publish.yml  sync-upstream.yml
docs/: DOCKER_DEPLOYMENT.md  TASK_MANAGEMENT_PROTOCOL.md  TESTING_GUIDE.md  TOKEN_POOL_IMPLEMENTATION.md  TROUBLESHOOTING.md  account-pool-migration.md  function-call-tool-use-conversion.md
protobuf2openai/: anthropic_converter.py  anthropic_sse_transform.py  app.py  config.py  helpers.py  metrics.py  models.py  packets.py  recovery_messages.py  reorder.py  router.py  sse_transform.py  token_counter.py
warp2protobuf/api/: protobuf_routes.py
warp2protobuf/config/: models.py
warp2protobuf/core/: auth.py  pool_auth.py  proxy_manager.py
warp2protobuf/warp/: api_client.py
